# gitopt

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitopt/: cli.py
